[project]
name = "ctst"
version = "0.1.0"
description = "Simple C test library and test runner"
authors = [
    {name = "Fernando López",email = "fernando.e.lopez@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "ctst_runner" }]

[tool.poetry.scripts]
ctst = "ctst_runner.runner:main"